maj du traitement

--- a/Notebooks/Inspection_BMM.ipynb
+++ b/Notebooks/Inspection_BMM.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -47,8 +47,6 @@
        "      <th></th>\n",
        "      <th>ordre_extraction</th>\n",
        "      <th>ordre_BMM</th>\n",
-       "      <th>Projet</th>\n",
-       "      <th>code echantillon</th>\n",
        "      <th>BMM µg/g_sol_E1</th>\n",
        "      <th>BMM µg/g_sol_E2</th>\n",
        "      <th>Moy E1_E2</th>\n",
@@ -59,8 +57,6 @@
        "      <th>0</th>\n",
        "      <td>30</td>\n",
        "      <td>1</td>\n",
-       "      <td>ECOLE</td>\n",
-       "      <td>CpUt_33Dic</td>\n",
        "      <td>20.410000</td>\n",
        "      <td>19.257809</td>\n",
        "      <td>19.833905</td>\n",
@@ -69,8 +65,6 @@
        "      <th>1</th>\n",
        "      <td>56</td>\n",
        "      <td>2</td>\n",
-       "      <td>ECOLE</td>\n",
-       "      <td>CpPl_05Vol</td>\n",
        "      <td>33.051145</td>\n",
        "      <td>28.920278</td>\n",
        "      <td>30.985711</td>\n",
@@ -79,8 +73,6 @@
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>ECOLE</td>\n",
-       "      <td>CpUt_22Lou</td>\n",
        "      <td>38.160000</td>\n",
        "      <td>31.161426</td>\n",
        "      <td>34.660713</td>\n",
@@ -89,8 +81,6 @@
        "      <th>3</th>\n",
        "      <td>11</td>\n",
        "      <td>4</td>\n",
-       "      <td>ECOLE</td>\n",
-       "      <td>CpPl_16Gal</td>\n",
        "      <td>49.999488</td>\n",
        "      <td>48.579693</td>\n",
        "      <td>49.289590</td>\n",
@@ -99,8 +89,6 @@
        "      <th>4</th>\n",
        "      <td>49</td>\n",
        "      <td>5</td>\n",
-       "      <td>ECOLE</td>\n",
-       "      <td>CpPl_40Dic</td>\n",
        "      <td>28.495809</td>\n",
        "      <td>39.644486</td>\n",
        "      <td>34.070148</td>\n",
@@ -109,8 +97,6 @@
        "      <th>5</th>\n",
        "      <td>67</td>\n",
        "      <td>6</td>\n",
-       "      <td>ECOLE</td>\n",
-       "      <td>CpUt_14Lou</td>\n",
        "      <td>19.770000</td>\n",
        "      <td>18.828635</td>\n",
        "      <td>19.299318</td>\n",
@@ -119,8 +105,6 @@
        "      <th>6</th>\n",
        "      <td>33</td>\n",
        "      <td>7</td>\n",
-       "      <td>ECOLE</td>\n",
-       "      <td>CpPl_15Gal</td>\n",
        "      <td>47.461896</td>\n",
        "      <td>39.549873</td>\n",
        "      <td>43.505885</td>\n",
@@ -129,8 +113,6 @@
        "      <th>7</th>\n",
        "      <td>48</td>\n",
        "      <td>8</td>\n",
-       "      <td>ECOLE</td>\n",
-       "      <td>EspV_13Cab</td>\n",
        "      <td>22.229449</td>\n",
        "      <td>34.944410</td>\n",
        "      <td>28.586930</td>\n",
@@ -139,8 +121,6 @@
        "      <th>8</th>\n",
        "      <td>22</td>\n",
        "      <td>9</td>\n",
-       "      <td>ECOLE</td>\n",
-       "      <td>EvEx_04Mou</td>\n",
        "      <td>33.347146</td>\n",
        "      <td>47.105316</td>\n",
        "      <td>40.226231</td>\n",
@@ -149,8 +129,6 @@
        "      <th>9</th>\n",
        "      <td>64</td>\n",
        "      <td>10</td>\n",
-       "      <td>ECOLE</td>\n",
-       "      <td>EspV_18Dau</td>\n",
        "      <td>34.743846</td>\n",
        "      <td>24.651571</td>\n",
        "      <td>29.697709</td>\n",
@@ -160,32 +138,20 @@
        "</div>"
       ],
       "text/plain": [
-       "   ordre_extraction  ordre_BMM Projet code echantillon  BMM µg/g_sol_E1  \\\n",
-       "0                30          1  ECOLE       CpUt_33Dic        20.410000   \n",
-       "1                56          2  ECOLE       CpPl_05Vol        33.051145   \n",
-       "2                 2          3  ECOLE       CpUt_22Lou        38.160000   \n",
-       "3                11          4  ECOLE       CpPl_16Gal        49.999488   \n",
-       "4                49          5  ECOLE       CpPl_40Dic        28.495809   \n",
-       "5                67          6  ECOLE       CpUt_14Lou        19.770000   \n",
-       "6                33          7  ECOLE       CpPl_15Gal        47.461896   \n",
-       "7                48          8  ECOLE       EspV_13Cab        22.229449   \n",
-       "8                22          9  ECOLE       EvEx_04Mou        33.347146   \n",
-       "9                64         10  ECOLE       EspV_18Dau        34.743846   \n",
-       "\n",
-       "   BMM µg/g_sol_E2  Moy E1_E2  \n",
-       "0        19.257809  19.833905  \n",
-       "1        28.920278  30.985711  \n",
-       "2        31.161426  34.660713  \n",
-       "3        48.579693  49.289590  \n",
-       "4        39.644486  34.070148  \n",
-       "5        18.828635  19.299318  \n",
-       "6        39.549873  43.505885  \n",
-       "7        34.944410  28.586930  \n",
-       "8        47.105316  40.226231  \n",
-       "9        24.651571  29.697709  "
+       "   ordre_extraction  ordre_BMM  BMM µg/g_sol_E1  BMM µg/g_sol_E2  Moy E1_E2\n",
+       "0                30          1        20.410000        19.257809  19.833905\n",
+       "1                56          2        33.051145        28.920278  30.985711\n",
+       "2                 2          3        38.160000        31.161426  34.660713\n",
+       "3                11          4        49.999488        48.579693  49.289590\n",
+       "4                49          5        28.495809        39.644486  34.070148\n",
+       "5                67          6        19.770000        18.828635  19.299318\n",
+       "6                33          7        47.461896        39.549873  43.505885\n",
+       "7                48          8        22.229449        34.944410  28.586930\n",
+       "8                22          9        33.347146        47.105316  40.226231\n",
+       "9                64         10        34.743846        24.651571  29.697709"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,6 +387,17 @@
     "col_name = df.columns[6]\n",
     "moyenne_col_7 = df[col_name].mean()\n",
     "print(f\"La moyenne de la colonne '{col_name}' est : {moyenne_col_7}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "col_name = df.columns[2]\n",
+    "df = df.drop(columns=[col_name])\n",
+    "df.to_excel(\"../Donnees/BiomasseMoleculaireMicrobienne_modifie.xlsx\", index=False)"
    ]
   }
  ],
